# Ottis-side-quest

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp
Assets/Img/: .Raqueros.kra-autosave.kra  .trainstation.kra-autosave.kra  Enemy.png~  Gonfaceforgame.kra  Gonfaceforgame.kra~  OttiAttack.png~  Raqueros.kra  Raqueros.kra~  TextBox.png~  document_0.kra  gonwalk.kra  gonwalk.png~  ottiintrain.kra  place0new.kra  trainstation.kra  trainstation.kra~
Assets/Img/gon_scene/: .tree.png-autosave.kra
codestuff/: Camera.cpp  Enviroment.cpp  Enviroment.h  Image.cpp  Level.cpp  LevelData.cpp  Levels.cpp  Mobs.cpp  NPCs.cpp  NPCsOLD.cpp  NPCsOLD.h  Objects.cpp  Objects.h  Objects_old.cpp  Particles.cpp  Particles.h  Physics.cpp  Platforms.cpp  Player.cpp  Settings.h  Troubleshooting.cpp  World.cpp  WorldInteraction.h  WorldInteractions.cpp  WorldOLDInteractionOLD.cpp  code.cpp  decos.cpp
data/Games/Game0/: gon_scene.txt  scene1.txt
data/Games/Game0/Assets/img/gon_scene/: .gonwalk.png-autosave.kra  gonwalk.png~
data/Games/Game0/Assets/img/suki_scene/: suki.png~
data/Games/Game0/Conversations/: conversation_gon_1.txt
data/Games/Game0/Scenes/: beach_scene.txt  gon_scene.txt
data/LevelData/dialog/: Gon1.txt
doc/: README.md  ascii_art.txt
include/: app.h  engineUI.h  utils.h
include/Entities/: background.h  block.h  character.h  items.h  npc.h  objects.h  player.h  vehicles.h
include/Graphics/: camera.h  debug_utils.h  particles.h  sprites.h  text.h
include/Interactions/: chat.h  indicators.h
include/Physics/: physics.h
include/ReadObjects/: read_objs.h
include/World/: chapter.h  game.h  scene.h
src/: app.cpp  app.h  engineUI.cpp  engineUI.h  main.cpp  p  utils.cpp  utils.h
src/Entities/: backGroundElements.h  background.cpp  background.h  block.cpp  block.h  character.cpp  character.h  interaction.cpp  interaction.h  items.cpp  items.h  npc.cpp  npc.h  objects.cpp  objects.h  player.cpp  player.h  vehicles.cpp  vehicles.h
src/Graphics/: camera.cpp  camera.h  debug_utils.cpp  debug_utils.h  particles.cpp  particles.h  sprites.cpp  sprites.h  text.cpp  text.h
src/Interactions/: chat.cpp  chat.h  indicators.cpp  indicators.h
src/Physics/: physics.cpp  physics.h
src/ReadObjects/: read_objs.cpp  read_objs.h
src/World/: chapter.cpp  chapter.h  game.cpp  game.h  scene.cpp  scene.h
